# Agents

./: CMakeLists.txt
inc/: agent_logic.h  cells.h  gene.h  main.h  neural_network.h  simulation.h  streamout.h
src/: agent_logic.cpp  main.cpp  neural_network.cpp  simulation.cpp  streamout.cpp
